# online-exam-management-system

./: 1.txt  README.md  docker-compose.yml
backend/: .dockerignore  .env.compose  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/db/: config.py  session.py
backend/app/api/v1/: attempts.py  auth.py  exams.py  questions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: attempt.py  exam.py  exam_question.py  question.py  student_answer.py  student_exam.py  user.py
backend/app/schemas/: attempt_schema.py  auth_schema.py  exam_schema.py  question_schema.py
backend/app/services/: excel_service.py  grading_service.py
backend/guides/: fastapi_project_structure.md
backend/guides/ERROR/: 1.md
backend/guides/database/: see_table_data.md
backend/helper/: generate_excel.py  sample_questions.xlsx
backend/tests/: test_excel.py  test_grading.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/shared/: Navbar.tsx  Sidebar.tsx
frontend/guides/: architechture.md  directory_structure.md  full.md  redirect_logic.md  redirect_logic_improved.md  rtk.md  step_by_step.md
frontend/hooks/: useAuth.ts  useAutoSave.ts  useExamSession.ts  useExamTimer.ts  useRequireAuth.ts
frontend/pages/: HomePage.tsx
guides/: exam_time_logic.md
(+45 files in other folders)
